.gitignore whatever latex aux file in every subdir

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # Latex stuff
-presentation/*.aux
-presentation/*.log
-presentation/*.nav
-presentation/*.out
-presentation/*.toc
-presentation/*.snm
-presentation/*.synctex.gz
+**/*.aux
+**/*.log
+**/*.nav
+**/*.out
+**/*.toc
+**/*.snm
+**/*.synctex.gz
